--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,24 +2,52 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build_release",
             "type": "shell",
             "command": "./makeAll.sh",
             "problemMatcher": [
                 "$gcc"
-            ]
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         },
         {
-            "group": "test",
-            "label": "test",
+            "label": "build_debug",
             "type": "shell",
-            "command": "./test/runTests.sh",
-            "dependsOn": [
-                "build"
+            "command": "./makeAll.sh",
+            "args": [
+                "--debug"
             ],
             "problemMatcher": [
                 "$gcc"
-            ]
+            ],
+            "group": "build"
+        },
+        {
+            "label": "test_release",
+            "type": "shell",
+            "command": "${workspaceFolder}/build/release/test/Racko_test",
+            "dependsOn": [
+                "build_release"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "test"
+        },
+        {
+            "label": "test_debug",
+            "type": "shell",
+            "command": "${workspaceFolder}/build/debug/test/Racko_test",
+            "dependsOn": [
+                "build_debug"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "test"
         }
     ]
 }
